[package]
name = "simple_pixiv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
log = "0.4.17"
env_logger = "0.9.0"
tokio = { version = "1.19.2", features = ["full"] }
askama = "0.11.1"

[build-dependencies]
askama = "0.11.1"
